@@ -1,2 +1,5 @@
+export function zeroPad(val: string | number, ndigits: number): string;
 export function toJSText(s: string): string;
+export function toXMLText(s: string): string;
+export function toAttrText(s: string): string;
 export function toHTMLText(s: string): string;
